chore: implementing integration tests
